# opendal-elixir

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mix.exs  test_setup.sh  test_teardown.sh
lib/: opendal.ex
lib/opendal/: config.ex  connection.ex  exception.ex  native.ex
native/opendal_native/: Cargo.toml  README.md
native/opendal_native/src/: lib.rs  task.rs
test/: opendal_test.exs  test_helper.exs
test/opendal/: native_test.exs
