[package]
name = "opendal_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "opendal_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19.0"
opendal = { version = "0.43.0", features = ["services-postgresql", "services-redis", "services-dashmap"] }
rustler = "0.30.0"
tokio = { version = "1.35.1", features = ["fs", "io-util", "rt-multi-thread"] }
